[ACPI] handle out of spec EC bit width http://bugzilla.kernel.org/show_bug.cgi?id=1744

Signed-off-by: Luming Yu <luming.yu@intel.com>
Signed-off-by: Len Brown <len.brown@intel.com>